tests/compiler/errors/propagate_error_mismatched_err.casa
# expect: SIGNATURE_MISMATCH
import "std"

fn bad -> Result[str int] {
    "e" Result::Error ?
}
